# Rustbox

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  RUSTBOX_ANALISE TECNICA.md  build.rs
scripts/: test-xephyr.sh
src/: battery.rs  hooks.rs  lib.rs  main.rs  mods.rs
src-rust/: Cargo.toml  LICENSE  l.txt
src-rust/src/: lib.rs  main.rs
src-rust/src/config/: mod.rs
src-rust/src/core/: color.rs  layer.rs  mod.rs  point.rs  rectangle.rs
src-rust/src/dialog/: mod.rs
src-rust/src/event/: mod.rs
src-rust/src/menu/: menu.rs  menuitem.rs  mod.rs
src-rust/src/notify/: mod.rs  render.rs
src-rust/src/render/: bitmap_font.rs  font.rs  image.rs  texture.rs
src-rust/src/screen/: mod.rs
src-rust/src/slit/: mod.rs
src-rust/src/toolbar/: mod.rs
src-rust/src/window/: client.rs  frame.rs  mod.rs
src-rust/src/workspace/: mod.rs
src-rust/src/x11/: atoms.rs  connection.rs  event.rs  mod.rs  pixmap.rs  window.rs
src-rust/zbus-ref/: AGENTS.md
src-rust/zbus-ref/.github/workflows/: deploy.yml
src-rust/zbus-ref/book/src/: faq.md
src-rust/zbus-ref/zbus_xml/: CHANGELOG.md
src-rust/zbus-ref/zbus_xml/src/: error.rs  xml.rs
src-rust/zbus-ref/zbus_xml/tests/data/real_world/: README.md  dbus_daemon.xml  dconf_writer.xml  hostname1.xml  locale1.xml  network1.xml  packagekit.xml  polkit1_authority.xml  systemd1_manager.xml  systemd1_scope_unit.xml  timedate1.xml
src-rust/zbus-ref/zbus_xmlgen/src/: lib.rs  main.rs
src-rust/zbus-ref/zbus_xmlgen/tests/: gen.rs
src-rust/zbus-ref/zbus_xmlgen/tests/data/: property_setters.xml  sample_object0.rs  sample_object0.xml  struct_return.rs  telepathy_docstrings.rs  telepathy_docstrings.xml
src-rust/zbus-ref/zvariant/: CHANGELOG.md  Cargo.toml
src-rust/zbus-ref/zvariant/src/as_value/: serialize.rs
src-rust/zbus-ref/zvariant/src/dbus/: ser.rs
src-rust/zbus-ref/zvariant/tests/: dict_value.rs
src-rust/zbus-ref/zvariant_derive/: Cargo.toml
src-rust/zbus-ref/zvariant_utils/src/signature/: mod.rs
src/command/: mod.rs
src/core/: strut.rs  types.rs
src/event/: mod.rs
src/keys/: mod.rs
src/menu/: menu.rs  mod.rs  parser.rs
src/notify/: mod.rs  render.rs
src/render/: emoji.rs  font.rs  image.rs  mod.rs
src/screen/: mod.rs
src/slit/: mod.rs
src/sni/: mod.rs
src/theme/: mod.rs
src/toolbar/: mod.rs
src/tray/: mod.rs
src/window/: client.rs  frame.rs  mod.rs  state.rs
src/x11/: connection.rs  drawable.rs  event.rs  gcontext.rs  window.rs
terminal/: Cargo.toml
terminal/patches/terminal-emulator/: Cargo.toml
terminal/patches/terminal-emulator/src/term/: cell.rs
terminal/src/: main.rs
tray_test/: Cargo.toml
tray_test/src/: main.rs
zbus-ref/: CONTRIBUTING.md  Cargo.toml  SECURITY.md  release-plz.toml
zbus-ref/.github/workflows/: bench.yml  rust.yml
zbus-ref/zbus_macros/: Cargo.toml
zbus-ref/zbus_names/: Cargo.toml
zbus-ref/zbus_xml/: Cargo.toml
zbus-ref/zbus_xml/benches/: benchmarks.rs
zbus-ref/zbus_xml/src/: lib.rs  telepathy.rs
zbus-ref/zbus_xml/tests/: tests.rs
zbus-ref/zbus_xml/tests/data/real_world/: login1.xml  systemd1_unit_list.xml
zbus-ref/zbus_xmlgen/: CHANGELOG.md  Cargo.toml
zbus-ref/zbus_xmlgen/tests/: compile.rs
zbus-ref/zbus_xmlgen/tests/data/: property_setters.rs  struct_return.xml  telepathy_edge_cases.rs  telepathy_edge_cases.xml
zbus-ref/zvariant/src/as_value/: deserialize.rs
zbus-ref/zvariant/tests/number/: bool_value.rs
zbus-ref/zvariant_utils/: CHANGELOG.md  Cargo.toml
zbus-ref/zvariant_utils/src/signature/: tests.rs
