[package]
name = "rustbox-rs"
version = "1.4.0"
edition = "2021"
description = "Rustbox window manager"
authors = ["Rustbox Team <rustbox@lists.sourceforge.net>"]
license = "MIT"

[features]
default = ["xrender", "xinerama", "xrandr", "xshape", "composite"]
xrender = ["x11rb/render"]
xinerama = ["x11rb/xinerama"]
xrandr = ["x11rb/randr"]
xshape = ["x11rb/shape"]
composite = ["x11rb/composite", "x11rb/damage"]
freetype2 = []
fribidi = ["unicode-bidi"]
debug = []
profiling = []

[dependencies]
# X11 protocol (pure Rust, no C dependencies needed beyond libxcb)
x11rb = { version = "0.13", features = ["resource_manager", "cursor", "image", "allow-unsafe-code"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async/event loop
polling = "3"

# Logging
log = "0.4"
env_logger = "0.11"

# Serde for config parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image loading
image = "0.25"

# Font rendering (TrueType outline rasterization + emoji)
ttf-parser = "0.25"
fontdb = "0.21"
ab_glyph = "0.2"
skrifa = "0.44"

# Unicode support
unicode-bidi = { version = "0.3", optional = true }

# Regex for config matching
regex = "1"

# Glob pattern matching
glob-match = "0.2"

# Signal handling
signal-hook = "0.3"

# Timezone support (localtime_r)
libc = "0.2"

# D-Bus (notification daemon / StatusNotifierHost)
dbus = "0.9"

# D-Bus (pure-Rust, async) for StatusNotifierItem (modern tray apps)
zbus = { version = "5", default-features = false, features = ["async-io"] }

# Lightweight async executor used by the SNI D-Bus thread (zbus async-io backend)
smol = "2"

# Stream utilities for the per-item SNI watch tasks (NewIcon / PropertiesChanged)
futures-util = "0.3"

# Terminal emulator: kitty (external binary, not a crate dependency)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "rustbox"
path = "src/main.rs"
