[workspace]
members = [
    ".",
    "terminal",
]
resolver = "2"

[package]
name = "rustbox-rs"
version = "1.4.0"
edition = "2021"
description = "Rustbox window manager"
authors = ["Rustbox Team <rustbox@lists.sourceforge.net>"]
license = "MIT"

[features]
default = ["xrender", "xinerama", "xrandr", "xshape", "wallpaper"]
xrender = ["x11rb/render"]
xinerama = ["x11rb/xinerama"]
xrandr = ["x11rb/randr"]
xshape = ["x11rb/shape"]
freetype2 = []
fribidi = ["unicode-bidi"]
debug = []
profiling = []
# Bundled wallpaper (compile-time embedded image + decode/scale path).
# Disable for extremely limited hardware to drop the embedded asset and the
# runtime decode/scale cost: `cargo build --release --no-default-features`
# (or `--features <others>` without `wallpaper`).
wallpaper = []

[dependencies]
# X11 protocol (pure Rust, no C dependencies needed beyond libxcb)
x11rb = { version = "0.13", features = ["resource_manager", "cursor", "image", "allow-unsafe-code"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Serde for config parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image loading — only the PNG decoder is needed (keeps the binary lean).
image = { version = "0.25", default-features = false, features = ["png"] }

# Font rendering (TrueType outline rasterization + emoji)
fontdb = "0.21"
ab_glyph = "0.2"
skrifa = "0.44"

# COLRv1 color-emoji rasterization (vector glyphs -> RGBA bitmaps)
tiny-skia = "0.11"
read-fonts = "0.41"

# Unicode support
unicode-bidi = { version = "0.3", optional = true }

# Regex for config matching
regex = "1"

# Glob pattern matching
glob-match = "0.2"

# Timezone support (localtime_r)
libc = "0.2"

# D-Bus (pure-Rust, async) for both the notification daemon and the
# StatusNotifierItem (modern tray apps) — served on a single zbus connection.
zbus = { version = "5", default-features = false, features = ["async-io"] }

# Lightweight async executor used by the SNI D-Bus thread (zbus async-io backend)
smol = "2"

# Stream utilities for the per-item SNI watch tasks (NewIcon / PropertiesChanged)
futures-util = "0.3"
# Async mpsc channels for the SNI thread (avoids busy-poll on std mpsc)
futures-channel = "0.3"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "rustbox"
path = "src/main.rs"

[patch.crates-io]
terminal-emulator = { path = "terminal/patches/terminal-emulator" }
